# LIO-SAM

./: CMakeLists.txt  Dockerfile  FillJson.py  LICENSE  README.md  docker-compose.yaml  extra.html  package.xml
.github/: stale.yml
cmd/: saveMap.sh
config/: params.yaml  params_copy.yaml  params_rs16.yaml  robot.urdf.xacro  rviz2.rviz
config/doc/kitti2bag/: README.md  kitti2bag.py
include/: utility.h
include/lio_sam/: gpsTools.hpp  utility.hpp
launch/: run.launch  run.launch.py  run_copy.launch
launch/include/: module_loam.launch  module_navsat.launch  module_robot_state_publisher.launch  module_rviz.launch
launch/include/config/: robot.urdf copy.xacro  robot.urdf.xacro  rviz.rviz
launch/include/rosconsole/: rosconsole_error.conf  rosconsole_info.conf  rosconsole_warn.conf
msg/: CloudInfo.msg  cloud_info.msg
src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  simpleGpsOdom.cpp
srv/: SaveMap.srv
